support for PAP delta updates
Issue-ID: POLICY-3187
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I91b343feb28fdff6b2391387e51defbdcfbe7b0f